--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@
 block content
   .center_text
     h1 Välkommen!
-  p Teknologföreningen firar sin 146:e årsfest lördagen den 24 mars 2018 och vi önskar Er hjärtligt välkommen att fira den med oss.
+  p Teknologföreningen firar sin 147:e årsfest lördagen den 23 mars 2019 och vi önskar Er hjärtligt välkommen att fira den med oss.
 
   p Festligheterna inleds med solenn akt i Design Factory på Aalto-universitetets campus i Otnäs där det finns möjlighet att framföra hälsningar till jubilaren.
 
@@ -13,7 +13,7 @@ block content
 
   p Vi önskar alla gäster en trevlig och minnesrik fest!
 
-  p Anmälan öppnar den 12 februari för inbjudna gäster och den 21 februari för övriga. Anmälan stänger den 11 mars, eller när alla platser är fyllda.
+  p Anmälan öppnar den 15 februari för inbjudna gäster och den 27 februari för övriga. Anmälan stänger den 10 mars, eller när alla platser är fyllda.
 
   p Anmälningar som kommer in efter att anmälningstiden tagit slut hamnar på vår reservlista. Vi tar kontakt med er specifikt om ni ryms med.
 
@@ -22,7 +22,7 @@ block content
     #a.register_button(href='/list/') Deltagare
 
   h2 Tidtabell
-  h4 24 mars 2018
+  h4 23 mars 2019
   #schedule
     .row
       .col-md-4 Solenn akt
@@ -45,7 +45,7 @@ block content
         | Urdsgjallar
         br
         | Otsvängen 22
-    h4 25 mars 2018
+    h4 24 mars 2019
     .row
       .col-md-4 Sillfrukost
       .col-md-2 12.00
@@ -58,6 +58,6 @@ block content
     a(href='mailto:arsfest@teknolog.fi') arsfest@tf.fi 
     | eller
     br
-    | Alina Huldén +358 44 309 9015
+    | Lauri Huitula +358 44 272 2066
     br
-    | Christian Segercrantz +358 40 056 6668
+    | Elin Nyman +358 50 365 9288
