fixed times for registration

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ block content
 
   .center_text
     a.register_button(href='/register/') Anmälan
-    #a.register_button(href='/list/') Deltagare
+    a.register_button(href='/list/') Deltagare
 
   h2 Tidtabell
   h4 23 mars 2019
