--- a/views/notopen.jade
+++ b/views/notopen.jade
@@ -2,6 +2,6 @@
 
 block content
   h1 Anmälningen är stängd
-  p Anmälningen till årsfesten har inte öppnat.
+  p Anmälningen till årsfesten har inte öppnat. Anmälan öppnar den 15 februari för inbjudna gäster och den 27 februari för övriga. Anmälan stänger den 10 mars, eller när alla platser är fyllda.
   p
     a(href="/") Tillbaka till startsidan
