added 'I give premission to use my contact-information'-checkbox

--- a/views/register.jade
+++ b/views/register.jade
@@ -62,6 +62,10 @@ block content
     .form-group
       label(for="misc") Övrigt
       input(type="text", name="misc").form-control
+    .checkbox
+      label
+        input(type="checkbox", name="sillis", value="1")
+        | Jag tillåter att årsfestsorganisatörerna får använda mina kontaktuppgifter till årsfesten.
     div.actions
       input(type="submit", value="Skicka")
     p
