--- a/views/register.jade
+++ b/views/register.jade
@@ -64,7 +64,7 @@ block content
       input(type="text", name="misc").form-control
     .checkbox
       label
-        input(type="checkbox", name="sillis", value="1")
+        input(type="checkbox", name="contact-information", value="1")
         | Jag tillåter att årsfestsorganisatörerna får använda mina kontaktuppgifter till årsfesten.
     div.actions
       input(type="submit", value="Skicka")
